# Scripts

./: .gitignore  1900 OR Hafner Results.xlsx  1900_inners_measure_data.ipynb  __init__.py  db_utils.py  example_usage.ipynb  load_dfq.ipynb  model_comparison.py  pyproject.toml
A.Schechtmann/: line11_data.ipynb
A1/ball_size_ml/: compare_orig_model.ipynb  load_and_pickle.ipynb  pca.ipynb  random_forest.ipynb
A1/pushpull/: db_utils.py  promess_pushpull.ipynb
